--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                     Hi. I&#x27;m Abel Johny.
                   </h1>
                   <p class="text-muted-foreground text-lg">
-                    I&#x27;m a technology solution advisor with a decade of
-                    practiced experience in management, software development,
-                    and SAP consultancy.
+                    I&#x27;m a software engineer and technology solution advisor
+                    with a decade of practiced experience in product management,
+                    software development, and SAP consultancy.
                   </p>
                 </div>
                 <div class="relative z-10 basis-1/3 overflow-clip transition">
